update implementation of ParallelizationWorkflowAgent